Added screen shot on failure function

--- a/com.sportappium.com/test-output/index.html
+++ b/com.sportappium.com/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Functional_Test_Suite_SamsungReal">
-                    <span>C:\Users\hiteshg\git\mobilesports\com.sportappium.com\MYT_MenProduct_Android_MobileAppSamsung_RealDevicetestng.xml</span>
+                    <span>C:\Users\hiteshg\git\mobilesports\com.sportappium.com\MYT_HomePageAndroid_MobileAppSamsung_RealDevicetestng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,18 +93,18 @@
                     <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Functional_Test_Suite_SamsungReal" class="hide-methods passed suite-Functional_Test_Suite_SamsungReal"> (hide)</a> <!-- hide-methods passed suite-Functional_Test_Suite_SamsungReal -->
-                      <a href="#" panel-name="suite-Functional_Test_Suite_SamsungReal" class="show-methods passed suite-Functional_Test_Suite_SamsungReal"> (show)</a> <!-- show-methods passed suite-Functional_Test_Suite_SamsungReal -->
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Functional_Test_Suite_SamsungReal" class="hide-methods failed suite-Functional_Test_Suite_SamsungReal"> (hide)</a> <!-- hide-methods failed suite-Functional_Test_Suite_SamsungReal -->
+                      <a href="#" panel-name="suite-Functional_Test_Suite_SamsungReal" class="show-methods failed suite-Functional_Test_Suite_SamsungReal"> (show)</a> <!-- show-methods failed suite-Functional_Test_Suite_SamsungReal -->
                     </span>
-                    <div class="method-list-content passed suite-Functional_Test_Suite_SamsungReal">
+                    <div class="method-list-content failed suite-Functional_Test_Suite_SamsungReal">
                       <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Functional_Test_Suite_SamsungReal" title="runner.com.MYMenProductPage.Runner_MenProductVerification" hash-for-method="runCukes">runCukes</a> <!-- method navigator-link -->
+                        <img width="3%" src="failed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Functional_Test_Suite_SamsungReal" title="runner.com.MYHomePage.Runner_HomePageVerification" hash-for-method="runCukes">runCukes</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content passed suite-Functional_Test_Suite_SamsungReal -->
+                    </div> <!-- method-list-content failed suite-Functional_Test_Suite_SamsungReal -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -119,7 +119,7 @@
           <div class="suite-Functional_Test_Suite_SamsungReal-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">runner.com.MYMenProductPage.Runner_MenProductVerification</span>
+              <span class="class-name">runner.com.MYHomePage.Runner_HomePageVerification</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -127,6 +127,23 @@
                   <a name="runCukes">
                   </a> <!-- runCukes -->
                   <span class="method-name">runCukes</span>
+                  <div class="stack-trace">java.lang.AssertionError: Myntra home page is not displayed expected [true] but found [false]
+	at com.cucumber.framework.pageobject.PG_MY_HomePage.verifyHomePage(PG_MY_HomePage.java:60)
+	at com.cucumber.framework.stepdefinition.HomePage.TC_01_HomePageDisplayVerification.user_verifies_home_page_is_displayed(TC_01_HomePageDisplayVerification.java:29)
+	at cucumber.runtime.Utils$1.call(Utils.java:40)
+	at cucumber.runtime.Timeout.timeout(Timeout.java:16)
+	at cucumber.runtime.Utils.invoke(Utils.java:34)
+	at cucumber.runtime.java.JavaStepDefinition.execute(JavaStepDefinition.java:38)
+	at cucumber.runtime.StepDefinitionMatch.runStep(StepDefinitionMatch.java:37)
+	at cucumber.runtime.Runtime.runStep(Runtime.java:300)
+	at cucumber.runtime.model.StepContainer.runStep(StepContainer.java:44)
+	at cucumber.runtime.model.StepContainer.runSteps(StepContainer.java:39)
+	at cucumber.runtime.model.CucumberScenario.run(CucumberScenario.java:44)
+	at cucumber.runtime.model.CucumberFeature.run(CucumberFeature.java:165)
+	at cucumber.api.testng.TestNGCucumberRunner.runCukes(TestNGCucumberRunner.java:50)
+	at runner.com.MYHomePage.Runner_HomePageVerification.runCukes(Runner_HomePageVerification.java:106)
+... Removed 31 stack frames
+</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -134,7 +151,7 @@
         </div> <!-- panel Functional_Test_Suite_SamsungReal -->
         <div panel-name="test-xml-Functional_Test_Suite_SamsungReal" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\hiteshg\git\mobilesports\com.sportappium.com\MYT_MenProduct_Android_MobileAppSamsung_RealDevicetestng.xml</span>
+            <span class="header-content">C:\Users\hiteshg\git\mobilesports\com.sportappium.com\MYT_HomePageAndroid_MobileAppSamsung_RealDevicetestng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -147,7 +164,7 @@
   &lt;test name=&quot;Samsung7&quot;&gt;
     &lt;parameter name=&quot;deviceID&quot; value=&quot;42003a0fd3148479&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;runner.com.MYMenProductPage.Runner_MenProductVerification&quot;/&gt;
+      &lt;class name=&quot;runner.com.MYHomePage.Runner_HomePageVerification&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Samsung7 --&gt;
 &lt;/suite&gt; &lt;!-- Functional Test Suite_SamsungReal --&gt;
@@ -190,13 +207,13 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runCukes')
-data.setCell(0, 2, 'runner.com.MYMenProductPage.Runner_MenProductVerification')
-data.setCell(0, 3, 48878);
+data.setCell(0, 2, 'runner.com.MYHomePage.Runner_HomePageVerification')
+data.setCell(0, 3, 104109);
 window.suiteTableData['Functional_Test_Suite_SamsungReal']= { tableData: data, tableDiv: 'times-div-Functional_Test_Suite_SamsungReal'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 48 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Functional_Test_Suite_SamsungReal">
               </div> <!-- times-div-Functional_Test_Suite_SamsungReal -->
             </div> <!-- times-div -->
@@ -222,26 +239,28 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">runner.com.MYMenProductPage.Runner_MenProductVerification</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">runner.com.MYHomePage.Runner_HomePageVerification</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">beforeSuite</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-test before">
-                <span class="method-name">onBeforeTestMobile(42003a0fd3148479, org.testng.TestRunner@3a4ba480)</span>
-                <span class="method-start">0 ms</span>
+                <span class="method-name">onBeforeTestMobile(42003a0fd3148479, org.testng.TestRunner@465b38e6)</span>
+                <span class="method-start">17 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
+                <img src="failed.png">
+                </img>
                 <span class="method-name">runCukes</span>
-                <span class="method-start">182 ms</span>
+                <span class="method-start">233 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">afterTest</span>
-                <span class="method-start">49060 ms</span>
+                <span class="method-start">104354 ms</span>
               </div> <!-- configuration-test after -->
               <div class="configuration-suite after">
                 <span class="method-name">afterSuite</span>
-                <span class="method-start">49432 ms</span>
+                <span class="method-start">104835 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
