--- a/com.sportappium.com/test-output/index.html
+++ b/com.sportappium.com/test-output/index.html
@@ -208,12 +208,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runCukes')
 data.setCell(0, 2, 'runner.com.MYHomePage.Runner_HomePageVerification')
-data.setCell(0, 3, 104109);
+data.setCell(0, 3, 43217);
 window.suiteTableData['Functional_Test_Suite_SamsungReal']= { tableData: data, tableDiv: 'times-div-Functional_Test_Suite_SamsungReal'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 43 seconds</span>
               <div id="times-div-Functional_Test_Suite_SamsungReal">
               </div> <!-- times-div-Functional_Test_Suite_SamsungReal -->
             </div> <!-- times-div -->
@@ -245,22 +245,22 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-test before">
-                <span class="method-name">onBeforeTestMobile(42003a0fd3148479, org.testng.TestRunner@465b38e6)</span>
-                <span class="method-start">17 ms</span>
+                <span class="method-name">onBeforeTestMobile(42003a0fd3148479, org.testng.TestRunner@383790cf)</span>
+                <span class="method-start">48 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">runCukes</span>
-                <span class="method-start">233 ms</span>
+                <span class="method-start">745 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">afterTest</span>
-                <span class="method-start">104354 ms</span>
+                <span class="method-start">43964 ms</span>
               </div> <!-- configuration-test after -->
               <div class="configuration-suite after">
                 <span class="method-name">afterSuite</span>
-                <span class="method-start">104835 ms</span>
+                <span class="method-start">44432 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
