--- a/com.sportappium.com/test-output/old/Functional Test Suite_SamsungReal/methods-alphabetical.html
+++ b/com.sportappium.com/test-output/old/Functional Test Suite_SamsungReal/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Functional Test Suite_SamsungReal</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="92efc3">  <td>18/06/22 09:32:22</td>   <td>0</td> <td title="&lt;&lt;Runner_HomePageVerification.afterSuite()[pri:0, instance:runner.com.MYHomePage.Runner_HomePageVerification@561b6512]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1212772528</td>   <td></td> </tr>
-<tr bgcolor="92efc3">  <td>18/06/22 09:32:22</td>   <td>-481</td> <td>&nbsp;</td><td title="&lt;&lt;Runner_HomePageVerification.afterTest()[pri:0, instance:runner.com.MYHomePage.Runner_HomePageVerification@561b6512]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1212772528</td>   <td></td> </tr>
-<tr bgcolor="92efc3">  <td>18/06/22 09:30:37</td>   <td>-104831</td> <td title="&gt;&gt;Runner_HomePageVerification.beforeSuite()[pri:0, instance:runner.com.MYHomePage.Runner_HomePageVerification@561b6512]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1212772528</td>   <td></td> </tr>
-<tr bgcolor="92efc3">  <td>18/06/22 09:30:37</td>   <td>-104816</td> <td>&nbsp;</td><td title="&gt;&gt;Runner_HomePageVerification.onBeforeTestMobile(java.lang.String, org.testng.ITestContext)[pri:0, instance:runner.com.MYHomePage.Runner_HomePageVerification@561b6512]">&gt;&gt;onBeforeTestMobile</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1212772528</td>   <td></td> </tr>
-<tr bgcolor="92efc3">  <td>18/06/22 09:30:37</td>   <td>-104602</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Runner_HomePageVerification.runCukes()[pri:0, instance:runner.com.MYHomePage.Runner_HomePageVerification@561b6512]">runCukes</td> 
-  <td>main@1212772528</td>   <td></td> </tr>
+<tr bgcolor="6fa38a">  <td>18/06/26 23:01:02</td>   <td>0</td> <td title="&lt;&lt;Runner_HomePageVerification.afterSuite()[pri:0, instance:runner.com.MYHomePage.Runner_HomePageVerification@6043cd28]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2092769598</td>   <td></td> </tr>
+<tr bgcolor="6fa38a">  <td>18/06/26 23:01:02</td>   <td>-468</td> <td>&nbsp;</td><td title="&lt;&lt;Runner_HomePageVerification.afterTest()[pri:0, instance:runner.com.MYHomePage.Runner_HomePageVerification@6043cd28]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2092769598</td>   <td></td> </tr>
+<tr bgcolor="6fa38a">  <td>18/06/26 23:00:18</td>   <td>-44413</td> <td title="&gt;&gt;Runner_HomePageVerification.beforeSuite()[pri:0, instance:runner.com.MYHomePage.Runner_HomePageVerification@6043cd28]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2092769598</td>   <td></td> </tr>
+<tr bgcolor="6fa38a">  <td>18/06/26 23:00:18</td>   <td>-44381</td> <td>&nbsp;</td><td title="&gt;&gt;Runner_HomePageVerification.onBeforeTestMobile(java.lang.String, org.testng.ITestContext)[pri:0, instance:runner.com.MYHomePage.Runner_HomePageVerification@6043cd28]">&gt;&gt;onBeforeTestMobile</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2092769598</td>   <td></td> </tr>
+<tr bgcolor="6fa38a">  <td>18/06/26 23:00:19</td>   <td>-43687</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Runner_HomePageVerification.runCukes()[pri:0, instance:runner.com.MYHomePage.Runner_HomePageVerification@6043cd28]">runCukes</td> 
+  <td>main@2092769598</td>   <td></td> </tr>
 </table>
